gccida/g0/combine_simplify_rtx
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4059:35: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  combine_simplify_rtx( rtx x, machine_mode op0_mode, int last, int in_dest) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4064:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v8; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4068:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v12; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4074:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v18; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4079:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v23; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4125:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inner_mode; // [rsp+88h] [rbp-A8h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4126:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code new_code; // [rsp+8Ch] [rbp-A4h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4131:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code cond_code; // [rsp+B4h] [rbp-7Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4135:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op_mode; // [rsp+D4h] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4142:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode cmp_mode; // [rsp+108h] [rbp-28h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4145:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+118h] [rbp-18h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4146:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+11Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4309:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| ( mode_class_0[mode] != MODE_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4310:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[mode] != MODE_PARTIAL_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4311:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[mode] != MODE_COMPLEX_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4312:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[mode] != MODE_VECTOR_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4315:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[mode] != MODE_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4316:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[mode] != MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/combine.c:4317:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[mode] != MODE_VECTOR_FLOAT) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_simplify_rtx/src/obj/combine.o] Error 1
